force-app/main/default/objects/df_122_nrmast_anhriga__c/df_122_nrmast_anhriga__c.object-meta.xml
<CustomObject>
    <label>Närmast anhöriga</label>
    <nameField>
        <label>Närmast anhöriga Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Närmast anhörigas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>