force-app/main/default/objects/df_122_nrmast_anhriga__c/fields/anvnda_varandra_bara_som_en_av_n_265__c.field-meta.xml
<CustomField>
    <fullName>anvnda_varandra_bara_som_en_av_n_265__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Använda varandra bara som af av  750f6</label>
    <type>Checkbox</type>
</CustomField>