force-app/main/default/objects/df_122_nrmast_anhriga__c/fields/efternamn_nrmast_anhrg__c.field-meta.xml
<CustomField>
    <fullName>efternamn_nrmast_anhrg__c</fullName>
    <label>Efternamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>