force-app/main/default/objects/df_122_nrmast_anhriga__c/fields/email_nrmast_anhrg__c.field-meta.xml
<CustomField>
    <fullName>email_nrmast_anhrg__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>