force-app/main/default/objects/df_122_nrmast_anhriga__c/fields/frnamn_nrmast_anhrg__c.field-meta.xml
<CustomField>
    <fullName>frnamn_nrmast_anhrg__c</fullName>
    <label>Förnamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>