force-app/main/default/objects/df_122_nrmast_anhriga__c/fields/telefon_nrmast_anhrg__c.field-meta.xml
<CustomField>
    <fullName>telefon_nrmast_anhrg__c</fullName>
    <label>Telefon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>